# ffmpeg-node

./: .gitignore  .gitmodules  LICENSE_VIVE  README.md  SConstruct
ffmpeg_build_scripts/: linux.sh  windows.sh
lib/all/include/libavutil/: ffversion.h
src/: AVHandler.cpp  AVHandler.h  CMakeLists.txt  DecoderFFmpeg.cpp  DecoderFFmpeg.h  FFmpegNode.cpp  FFmpegNode.h  FFmpegRect.cpp  FFmpegRect.h  IDecoder.h  RegisterTypes.cpp  RegisterTypes.h  ViveMediaDecoder.cpp  ViveMediaDecoder.h  Wrapper.cpp  Wrapper.h  register_types.cpp  register_types.h  wrapper.cpp  wrapper.h
test/: ffmpeg_media_decoder.gdextension  icon.png.import  main.gd  main.tscn
